--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^5.13.4",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/x-date-pickers": "^6.7.0",
+    "date-fns": "^2.30.0",
     "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
